{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 9,
  "lineage": "2579f798-7d1d-3adf-8ae0-c481d5c6adec",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:207567792660:internet-gateway/igw-09681337e23463a31",
            "id": "igw-09681337e23463a31",
            "owner_id": "207567792660",
            "tags": {
              "Name": "scylldb_simple_app-igw",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "scylldb_simple_app-igw",
              "environment": "dev"
            },
            "vpc_id": "vpc-0a12ff0979fc4e4e4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09681337e23463a31",
            "id": "r-rtb-04ae8db6c272be2da1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04ae8db6c272be2da",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:207567792660:route-table/rtb-04ae8db6c272be2da",
            "id": "rtb-04ae8db6c272be2da",
            "owner_id": "207567792660",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "scylldb_simple_app-public-rt",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "scylldb_simple_app-public-rt",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a12ff0979fc4e4e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fee684d3b4f2c49",
            "route_table_id": "rtb-04ae8db6c272be2da",
            "subnet_id": "subnet-0f75a5ac701cacfe4"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042a923b8a52f2750",
            "route_table_id": "rtb-04ae8db6c272be2da",
            "subnet_id": "subnet-0f0f59c0531f8d3d3"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:207567792660:subnet/subnet-0f75a5ac701cacfe4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f75a5ac701cacfe4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "207567792660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "scylldb_simple_app-public-subnet-0",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "scylldb_simple_app-public-subnet-0",
              "environment": "dev"
            },
            "vpc_id": "vpc-0a12ff0979fc4e4e4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:207567792660:subnet/subnet-0f0f59c0531f8d3d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0f59c0531f8d3d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "207567792660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "scylldb_simple_app-public-subnet-1",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "scylldb_simple_app-public-subnet-1",
              "environment": "dev"
            },
            "vpc_id": "vpc-0a12ff0979fc4e4e4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:207567792660:vpc/vpc-0a12ff0979fc4e4e4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-052454013be618c1f",
            "default_route_table_id": "rtb-05d0a02e2a2f3357f",
            "default_security_group_id": "sg-08f87017d54be8497",
            "dhcp_options_id": "dopt-046afa0c2af62860d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a12ff0979fc4e4e4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05d0a02e2a2f3357f",
            "owner_id": "207567792660",
            "tags": {
              "Name": "scylldb_simple_app-vpc",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "scylldb_simple_app-vpc",
              "environment": "dev"
            }
          }
        }
      ]
    }
  ]
}